# whereclaw

./: .gitignore  README.md  VERSION.json  index.html  package-lock.json  package.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-13-release-ci-matrix.md  2026-03-13-tray-close-behavior.md  2026-03-14-gateway-model-latest-compat.md  2026-03-14-remote-skills-manifest.md  2026-03-14-version-manifest.md  2026-03-14-whereclaw-terminal-ollama.md  2026-04-11-channel-onboarding.md  2026-04-15-remote-desktop-manifest.md
docs/superpowers/specs/: 2026-03-14-remote-skills-manifest-design.md  2026-03-14-version-manifest-design.md  (+2 more)
scripts/: compile-bundled-weixin-plugin.mjs  compile-bundled-weixin-plugin.test.mjs  package-linux-x64.sh  package-macos-arm64.sh  package-macos-common.sh  package-macos-x64.sh  package-version.mjs  package-windows-x64.ps1  prepare-openclaw-engine.ps1  prepare-openclaw-engine.sh  reinstall-macos-gatekeeper-test.sh  version-sync.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/superpowers/plans/: 2026-03-13-exit-cleanup-hook.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/onboarding/: channelStep.test.ts  channelStep.ts  modelStep.ts  qqStep.ts  weixinQr.test.ts  weixinQr.ts
src/runtime/: gatewayState.ts  localModelName.ts
tests/: macos-package-version.test.mjs  prepare-openclaw-engine.test.sh  remote-desktop-manifest.test.mjs  remove-legacy-skills-json.test.mjs  tray-icon-assets.test.mjs
whereclaw-engine/: README.md
