[package]
name = "app"
version = "1.1.0"
description = "WhereClaw desktop application"
authors = ["Fangchao Gao <flygfch@163.com>"]
license = "UNLICENSED"
repository = "https://github.com/gaofc/whereclaw"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rand = "0.8"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-log = "2"
url = "2"
webbrowser = "1"
portable-pty = "0.9"
sysinfo = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png"] }
